<resources>
    <string name="app_name">Megah Jaya</string>
    <!-- Login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <!-- Login -->
    <!-- Menu -->
    <string name="penjualan">Penjualan</string>
    <string name="historiPenjualan">Histori Penjualan</string>
    <string name="gudang">Gudang</string>
    <string name="tambahBarangBaru">Tambah Barang Baru</string>
    <string name="tambahJumlahBarang">Tambah Jumlah Barang</string>
    <string name="ubahDataBarang">Ubah Data Barang</string>
    <string name="hapusBarang">Hapus Barang</string>
    <string name="keluar">Keluar</string>
    <!-- Menu -->
    <!-- Button -->
    <string name="lanjut">Lanjut</string>
    <string name="login">Login</string>
    <string name="scan">Scan</string>
    <string name="ubah">Ubah</string>
    <string name="tambahBarang">Tambah Barang</string>
    <string name="save">Simpan</string>
    <string name="prev">Sebelumnya</string>
    <string name="next">Selanjutnya</string>
    <string name="ambil">Ambil</string>
    <string name="cekInvoice">Cek Bon</string>
    <string name="menuUtama">Menu Utama</string>
    <!-- Button -->
    <!-- PenjualanTemp -->
    <string name="kosong">Tidak ada permintaan barang dari pembeli</string>
    <string name="cariBarang">Cari Barang</string>
    <string name="jumlah">Jumlah: </string>
    <!-- PenjualanTemp -->
    <!-- PenjualanTemp Info -->
    <string name="tipeBon">Tipe Bon:</string>
    <string-array name="listBon">
        <item>Bon 1</item>
        <item>Bon 2</item>
        <item>Bon 3</item>
    </string-array>
    <string name="nomorInvoiceText">Nomor Invoice:</string>
    <string name="nomorInvoice">Nomor Invoice/Bon</string>
    <string name="namaPembeliText">Nama Pembeli/Toko:</string>
    <string name="namaPembeli">Nama Pembeli/Toko</string>
    <string name="alamatText">Alamat:</string>
    <string name="alamat">Alamat</string>
    <string name="teleponText">Nomor Telepon:</string>
    <string name="telepon">02135264856</string>
    <string name="keteranganText">Keterangan:</string>
    <string name="keterangan">Keterangan</string>
    <string name="diskonText">Diskon:</string>
    <string name="diskon">Diskon</string>
    <string name="statusText">Status:</string>
    <string-array name="listStatus">
        <item>Belum Lunas</item>
        <item>Lunas</item>
    </string-array>
    <!-- PenjualanTemp Info -->

    <!-- PenjualanTemp Success -->
    <string name="successCustomerName">Pembeli:</string>
    <string name="successNamaPembeliText">Nama Pembeli</string>
    <string name="successCustomerAddress">Alamat:</string>
    <string name="successAlamatText">Alamat pembeli</string>
    <string name="successCustomerInfo">Info</string>
    <string name="total">Total:</string>
    <string name="materialTotalPrice">1000000</string>
    <!-- PenjualanTemp Success -->

    <!-- Histori PenjualanTemp -->
    <string name="customerDate">Tanggal</string>
    <string name="customerName">Nama Pembeli</string>
    <string name="customerAddress">Alamat</string>
    <string name="customerInformation">Keterangan</string>
    <string name="hargaTotal">Harga total:</string>
    <string name="customerTotalPrice">1000000</string>
    <!-- Histori PenjualanTemp -->

    <!-- Gudang -->
    <string name="materialName">Nama Barang</string>
    <string name="materialCode">Kode Barang</string>
    <string name="materialDesc">Deskripsi</string>
    <string name="tipeText">Tipe: </string>
    <string name="materialType">Nama_Tipe</string>
    <string name="satuanText">Satuan barang:</string>
    <string name="materialUnit">Kg</string>
    <string name="jumlahBarangText">Jumlah Barang: </string>
    <string name="quantity">123</string>
    <string name="stokMinimumText">Stok Minimum:</string>
    <string name="hargaBarangText">Harga Barang: </string>
    <string name="rp">Rp</string>
    <string name="materialPrice">12500</string>
    <!-- Gudang -->
    <!-- Update -->
    <string name="updateNamaBarangText">Nama Barang:</string>
    <string name="updateKodeBarangText">Kode Barang:</string>
    <string name="updateSatuanBarangText">Satuan Barang:</string>
    <string name="updateTipeBarangText">Tipe Barang:</string>
    <string name="updateJumlahBarangText">Jumlah Barang: </string>
    <string name="updateStokMinimumText">Stok Minimum:</string>
    <string name="updateHargaBarangText">Harga Barang: </string>
    <!-- Update -->
    <!-- Tambah Barang Baru -->
    <string name="addMaterialNameText">Nama Barang:</string>
    <string name="addMaterialGroupText">Group/Kategori Barang:</string>
    <string name="addMaterialCodeText">Kode Barang:</string>
    <string name="addMaterialQuantityText">Jumlah Barang:</string>
    <string name="addMaterialQuantityUnitType">Satuan:</string>
    <string name="addMaterialPriceText">Harga Barang:</string>
    <string name="addMaterialMinimumText">Jumlah Minimum:</string>
    <string name="materialNamePlaceholder">Besi Beton 10 mm/Kuas 2"/Keni 2"/...</string>
    <string name="materialCodePlaceholder">QWERT/YUIOP/...</string>
    <string name="materialGroupPlaceholder">Besi/Cat/Keni/Pipa/Triplek/dll...</string>
    <string name="materialQuantityPlaceholder">20/50/120/180/...</string>
    <string name="materialUnitTypePlaceholder">Kg/Ons/Lembar/...</string>
    <string name="materialPricePlaceholder">12000/25000/68000/...</string>
    <string name="materialMinimumPlaceholder">12/34/56/...</string>
    <string name="successAddNewMaterial"></string>
    <!-- Tambah Barang Baru -->
    <!-- Others -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="button">button</string>
    <string name="delete">delete</string>
    <string name="todo">TODO</string>
    <string name="pageNumber">1</string>
    <!-- Others -->
</resources>
