<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Gudang.Update.UpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/updateToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/updateNamaBarangText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updateNamaBarangText"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/updateMaterialName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/materialName"
            android:inputType="text"
            android:labelFor="@id/updateNamaBarangText" />

        <TextView
            android:id="@+id/updateKodeBarangText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/updateKodeBarangText"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/updateMaterialCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/materialCode"
            android:inputType="text"
            android:labelFor="@id/updateKodeBarangText" />

        <TextView
            android:id="@+id/updateSatuanBarangText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/updateSatuanBarangText"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/updateMaterialMeasurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/materialUnitTypePlaceholder"
            android:inputType="text"
            android:labelFor="@id/updateKodeBarangText" />

        <TextView
            android:id="@+id/updateTipeBarangText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/updateTipeBarangText"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/updateMaterialGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/materialGroupPlaceholder"
            android:inputType="text"
            android:labelFor="@id/updateKodeBarangText" />

        <TextView
            android:id="@+id/updateJumlahBarangText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/updateJumlahBarangText"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/updateMaterialQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="number"
            android:labelFor="@id/updateJumlahBarangText" />

        <TextView
            android:id="@+id/updateJumlahMinimumBarangText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/updateStokMinimumText"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/updateMaterialMinimumStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="number"
            android:labelFor="@id/updateHargaBarangText" />

        <TextView
            android:id="@+id/updateHargaBarangText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/updateHargaBarangText"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/updateMaterialPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/materialPrice"
            android:inputType="number"
            android:labelFor="@id/updateHargaBarangText" />

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/ubah" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>