<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_layout"
            android:padding="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/historiPenjualanCustomerDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customerDate"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/historiPenjualanCustomerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/historiPenjualanCustomerDate"
                android:layout_marginTop="8dp"
                android:text="@string/customerName"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/historiPenjualanCustomerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/historiPenjualanCustomerName"
                android:layout_marginTop="8dp"
                android:text="@string/customerAddress"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/historiPenjualanCustomerInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/historiPenjualanCustomerAddress"
                android:layout_marginTop="8dp"
                android:text="@string/customerInformation"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/historiPenjualanTotalPembelianText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/historiPenjualanCustomerInformation"
                android:layout_marginTop="8dp"
                android:text="@string/hargaTotal"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/historiPenjualanCustomerTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/historiPenjualanTotalPembelianText"
                android:layout_toEndOf="@id/historiPenjualanTotalPembelianText"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:text="@string/customerTotalPrice"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>